Added progress bar
Installing modpack doesn't block UI any more